welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: not found: value taille
    recule(taille)
           ^Array2:25: error: not found: value taille
    for (k<-0 to taille-1){
                 ^Array2:4: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.Array2'
override def run() {
             ^